--- a/web01/homeword/user/templates/index.html
+++ b/web01/homeword/user/templates/index.html
@@ -14,6 +14,7 @@
             <hr>
             <h3> Name : {{users[username]['name']}}</h3>
             <p> Age : {{users[username]['age']}}</p>
+            <p> Gender : {{users[username]['gender']}}</p>
             <hr>
         </div>
 </body>
