--- a/web01/homeword/BMI/templates/index.html
+++ b/web01/homeword/BMI/templates/index.html
@@ -11,15 +11,15 @@
 <body>
     <h1>Your BMI = {{BMI}}</h1>
         {% if BMI < 16 %}
-            Severely underweigh 
+            BMI < 16: Severely underweigh </p>
         {% elif  BMI < 18.5 %}
-             Underweight
+            <p> 16 <= BMI < 18,5: Underweight </p>
         {% elif BMI < 25 %}
-            Normal 
+            <p> 18,5 <= BMI < 25 Normal </p>
         {% elif BMI < 30 %}
-            Overweight 
+            <p> 25 <= BMI < 30 Overweight </p>
         {% else %}
-          Obese 
+            <p> BMI > 30 Obese </p>
         {% endif %}
 </body>
 </html>
