--- a/web01/homeword/BMI/templates/index.html
+++ b/web01/homeword/BMI/templates/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Your BMI = {{BMI}}</h1>
         {% if BMI < 16 %}
-            BMI < 16: Severely underweigh </p>
+            <p>BMI < 16: Severely underweigh </p>
         {% elif  BMI < 18.5 %}
             <p> 16 <= BMI < 18,5: Underweight </p>
         {% elif BMI < 25 %}
